<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dave.adrproject1.OutputType">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/textConverted"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbASCII"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optASCII"
            android:textSize="30sp" />
        <RadioButton
            android:id="@+id/rbRP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optRP"
            android:textSize="30sp" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optMorse"
            android:textSize="30sp"
            android:id="@+id/rbMorse"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optTxtSpeak"
            android:textSize="30sp"
            android:id="@+id/rbTxtSpeak"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectTypes"
        android:textSize="25sp"
        android:id="@+id/btChoose"/>
</LinearLayout>
