<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dave.adrproject1.MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="270dip"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/txtHint"
            android:id="@+id/txtConvert"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/go"
            android:contentDescription="@string/convert"
            android:layout_toRightOf="@id/txtConvert"
            android:layout_toEndOf="@id/txtConvert"
            android:id="@+id/convertText"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:id="@+id/typeChoice"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recentConversions"
        android:textColor="@color/colorText"
        android:textSize="20sp"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/history"/>
</LinearLayout>
